--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: '^0.1.2'
+  cupertino_icons: '^0.1.2'  #aremove
 
+  http: '^0.12.1'
   email_validator: '^1.0.0'
   json_annotation: '^3.0.0'
 
