--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dev_dependencies:
   build_runner: ^1.0.0
   json_serializable: ^3.2.0
 
+module:
+    androidX: true
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
