--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: '^0.12.1'
   email_validator: '^1.0.0'
   json_annotation: '^3.0.0'
+  flutter_form_builder: '^3.10.1'
 
 dev_dependencies:
   flutter_test:
